<resources>
    <string name="app_name" translatable="false">DigitalHotel</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In or Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello</string>
    <string name="log_out">Log Out</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="booking">Booking</string>
    <string name="room">Room</string>
    <string name="profile">Profile</string>
    <string name="select_dates">Select dates</string>
    <string name="search">Search</string>
    <string name="no_rooms_found">No rooms found</string>
    <string name="price" translatable="false">%d $</string>
    <string name="dates" translatable="false">%s - %s</string>
    <string name="add_booking">Add booking</string>
    <string name="pay">Pay</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="qr_code" translatable="false">Qr Code</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="choose_date">Choose date</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="patronymic">Patronymic (if any)</string>
    <string name="phone_number">Phone Number</string>
    <string name="error_field_required">Please, fill this field</string>
    <string name="error_invalid_phone_number">Invalid phone number</string>
    <string name="add">Add</string>
    <string name="search_friend">Search friend…</string>
    <string name="friend_s_email">Friend\'s email</string>
    <string name="user_not_found">User not found</string>
    <string name="already_friends">You are friends already</string>
    <string name="friend_request_accepted_title">Friend request has been accepted</string>
    <string name="friend_request_accepted_body">%s and you now are friends</string>
    <string name="new_friend_request_title">New friend request</string>
    <string name="new_friend_request_body">%s wants to be your friend</string>
    <string name="sharing_access">Sharing access</string>
    <string name="share_access">Share access</string>
    <string name="access_granted_title">Access granted</string>
    <string name="access_granted_body">%s grants you access to room %s at %s</string>
    <string name="right_access">Access to room</string>
    <string name="right_reservations">Make reservations</string>
    <string name="right_pay">Pay for services</string>
    <string name="save">Save</string>
    <string name="right_manage_room">Manage room</string>
    <string name="days_left">%d days left</string>
    <string name="today">Today</string>
    <plurals name="rooms_count">
        <item quantity="one">%d room left</item>
        <item quantity="other">%d rooms left</item>
    </plurals>
    <plurals name="adults_count">
        <item quantity="one">%d adult</item>
        <item quantity="other">%d adults</item>
    </plurals>
    <plurals name="children_count">
        <item quantity="one">%d child</item>
        <item quantity="other">%d children</item>
    </plurals>
</resources>