<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/first_name_edit_text"
            style="@style/StandartEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:autofillHints="name"
            android:hint="@string/first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/last_name_edit_text"
            style="@style/StandartEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:autofillHints="name"
            android:hint="@string/last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/patronymic_edit_text"
            style="@style/StandartEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:hint="@string/patronymic" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone_number_edit_text"
            style="@style/StandartEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:autofillHints="phone"
            android:hint="@string/phone_number"
            android:inputType="phone" />


        <RadioGroup
            android:id="@+id/sex_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <Button
            android:id="@+id/date_picker_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/choose_date" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>